DuPont DevSB/src/objects/Functional_Design_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BA_Configuration__c</fullName>
        <label>BA Configuration</label>
        <referenceTo>BA_Configuration__c</referenceTo>
        <relationshipName>Functional_Design_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Back_plate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back plate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <label>Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Desert Camouflage</fullName>
                </value>
                <value>
                    <fullName>Forest Camouflage</fullName>
                </value>
                <value>
                    <fullName>Grey Camouflage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment_Flammability__c</fullName>
        <label>Comment  Flammability</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_Flexibility__c</fullName>
        <label>Comment  Flexibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comment_Lab_test__c</fullName>
        <label>Comment  Lab test</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_L_size_E__c</fullName>
        <label>Dimension of BP for L size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_L_size_F__c</fullName>
        <label>Dimension of BP for L size F</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_L_size_G__c</fullName>
        <label>Dimension of BP for L size G</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_L_size_H__c</fullName>
        <label>Dimension of BP for L size H</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_M_size_E__c</fullName>
        <label>Dimension of BP for M size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_M_size_F__c</fullName>
        <label>Dimension of BP for M size F</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_M_size_G__c</fullName>
        <label>Dimension of BP for M size G</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_M_size_H__c</fullName>
        <label>Dimension of BP for M size H</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_S_size_E__c</fullName>
        <label>Dimension of BP for S size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_S_size_F__c</fullName>
        <label>Dimension of BP for S size F</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_S_size_G__c</fullName>
        <label>Dimension of BP for S size G</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_S_size_H__c</fullName>
        <label>Dimension of BP for S size H</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XL_size_E__c</fullName>
        <label>Dimension of BP for XL size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XL_size_F__c</fullName>
        <label>Dimension of BP for XL size F</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XL_size_G__c</fullName>
        <label>Dimension of BP for XL size G</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XL_size_H__c</fullName>
        <label>Dimension of BP for XL size H</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XS_size_E__c</fullName>
        <label>Dimension of BP for XS size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XS_size_F__c</fullName>
        <label>Dimension of BP for XS size F</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XS_size_G__c</fullName>
        <label>Dimension of BP for XS size G</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XS_size_H__c</fullName>
        <label>Dimension of BP for XS size H</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XXL_size_E__c</fullName>
        <label>Dimension of BP for XXL size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XXL_size_F__c</fullName>
        <label>Dimension of BP for XXL size F</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XXL_size_G__c</fullName>
        <label>Dimension of BP for XXL size G</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_BP_for_XXL_size_H__c</fullName>
        <label>Dimension of BP for XXL size H</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_L_size_A__c</fullName>
        <label>Dimension of FP for L size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_L_size_B__c</fullName>
        <label>Dimension of FP for L size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_L_size_C__c</fullName>
        <label>Dimension of FP for L size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_L_size_D__c</fullName>
        <label>Dimension of FP for L size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_M_size_A__c</fullName>
        <label>Dimension of FP for M size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_M_size_B__c</fullName>
        <label>Dimension of FP for M size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_M_size_C__c</fullName>
        <label>Dimension of FP for M size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_M_size_D__c</fullName>
        <label>Dimension of FP for M size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_S_size_A__c</fullName>
        <label>Dimension of FP for S size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_S_size_B__c</fullName>
        <label>Dimension of FP for S size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_S_size_C__c</fullName>
        <label>Dimension of FP for S size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_S_size_D__c</fullName>
        <label>Dimension of FP for S size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XL_size_A__c</fullName>
        <label>Dimension of FP for XL size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XL_size_B__c</fullName>
        <label>Dimension of FP for XL size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XL_size_C__c</fullName>
        <label>Dimension of FP for XL size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XL_size_D__c</fullName>
        <label>Dimension of FP for XL size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XS_size_C__c</fullName>
        <label>Dimension of FP for XS size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XS_size_D__c</fullName>
        <label>Dimension of FP for XS size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XXL_size_A__c</fullName>
        <label>Dimension of FP for XXL size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XXL_size_B__c</fullName>
        <label>Dimension of FP for XXL size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XXL_size_C__c</fullName>
        <label>Dimension of FP for XXL size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_XXL_size_D__c</fullName>
        <label>Dimension of FP for XXL size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_xs_size_A__c</fullName>
        <label>Dimension of FP for XS size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_FP_for_xs_size_B__c</fullName>
        <label>Dimension of FP for XS size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_L_size_A__c</fullName>
        <label>Dimension of L size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_L_size_B__c</fullName>
        <label>Dimension of L size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_L_size_C__c</fullName>
        <label>Dimension of L size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_L_size_D__c</fullName>
        <label>Dimension of L size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_L_size_E__c</fullName>
        <label>Dimension of L size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_M_Size_A__c</fullName>
        <label>Dimension of M Size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_M_Size_B__c</fullName>
        <label>Dimension of M Size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_M_Size_C__c</fullName>
        <label>Dimension of M Size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_M_Size_D__c</fullName>
        <label>Dimension of M Size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_M_Size_E__c</fullName>
        <label>Dimension of M Size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_L_size_I__c</fullName>
        <label>Dimension of SP for L size I</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_L_size_J__c</fullName>
        <label>Dimension of SP for L size J</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_L_size_K__c</fullName>
        <label>Dimension of SP for L size K</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_L_size_L__c</fullName>
        <label>Dimension of SP for L size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_M_size_I__c</fullName>
        <label>Dimension of SP for M size I</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_M_size_J__c</fullName>
        <label>Dimension of SP for M size J</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_M_size_K__c</fullName>
        <label>Dimension of SP for M size K</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_M_size_L__c</fullName>
        <label>Dimension of SP for M size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_S_size_I__c</fullName>
        <label>Dimension of SP for S size I</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_S_size_J__c</fullName>
        <label>Dimension of SP for S size J</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_S_size_K__c</fullName>
        <label>Dimension of SP for S size K</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_S_size_L__c</fullName>
        <label>Dimension of SP for S size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XL_size_I__c</fullName>
        <label>Dimension of SP for XL size I</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XL_size_J__c</fullName>
        <label>Dimension of SP for XL size J</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XL_size_K__c</fullName>
        <label>Dimension of SP for XL size K</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XL_size_L__c</fullName>
        <label>Dimension of SP for XL size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XS_size_I__c</fullName>
        <label>Dimension of SP for XS size I</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XS_size_J__c</fullName>
        <label>Dimension of SP for XS size J</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XS_size_K__c</fullName>
        <label>Dimension of SP for XS size K</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XS_size_L__c</fullName>
        <label>Dimension of SP for XS size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XXL_size_I__c</fullName>
        <label>Dimension of SP for XXL size I</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XXL_size_J__c</fullName>
        <label>Dimension of SP for XXL size J</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XXL_size_K__c</fullName>
        <label>Dimension of SP for XXL size K</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_SP_for_XXL_size_L__c</fullName>
        <label>Dimension of SP for XXL size L</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_S_size_A__c</fullName>
        <label>Dimension of S size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_S_size_B__c</fullName>
        <label>Dimension of S size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_S_size_C__c</fullName>
        <label>Dimension of S size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_S_size_D__c</fullName>
        <label>Dimension of S size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_S_size_E__c</fullName>
        <label>Dimension of S size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XL_size_A__c</fullName>
        <label>Dimension of XL size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XL_size_B__c</fullName>
        <label>Dimension of XL size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XL_size_C__c</fullName>
        <label>Dimension of XL size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XL_size_D__c</fullName>
        <label>Dimension of XL size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XL_size_E__c</fullName>
        <label>Dimension of XL size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XS_size_A__c</fullName>
        <label>Dimension of XS size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XS_size_B__c</fullName>
        <label>Dimension of XS size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XS_size_C__c</fullName>
        <label>Dimension of XS size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XS_size_D__c</fullName>
        <label>Dimension of XS size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XS_size_E__c</fullName>
        <label>Dimension of XS size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XXL_size_A__c</fullName>
        <label>Dimension of XXL size A</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XXL_size_B__c</fullName>
        <label>Dimension of XXL size B</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XXL_size_C__c</fullName>
        <label>Dimension of XXL size C</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XXL_size_D__c</fullName>
        <label>Dimension of XXL size D</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension_of_XXL_size_E__c</fullName>
        <label>Dimension of XXL size E</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FDR_ID_iOS__c</fullName>
        <externalId>true</externalId>
        <label>FDR ID iOS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factor_HAP_BP__c</fullName>
        <label>Factor HAP BP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:25</fullName>
                </value>
                <value>
                    <fullName>B:25</fullName>
                </value>
                <value>
                    <fullName>C:0</fullName>
                </value>
                <value>
                    <fullName>D:0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factor_HAP_FP__c</fullName>
        <label>Factor HAP FP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:25</fullName>
                </value>
                <value>
                    <fullName>B:25</fullName>
                </value>
                <value>
                    <fullName>C:0</fullName>
                </value>
                <value>
                    <fullName>D:0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factor_HAP_SP__c</fullName>
        <label>Factor HAP SP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:25</fullName>
                </value>
                <value>
                    <fullName>B:25</fullName>
                </value>
                <value>
                    <fullName>C:0</fullName>
                </value>
                <value>
                    <fullName>D:0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Factor_SAP__c</fullName>
        <label>Factor SAP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:114</fullName>
                </value>
                <value>
                    <fullName>B:25</fullName>
                </value>
                <value>
                    <fullName>C:25</fullName>
                </value>
                <value>
                    <fullName>D:51</fullName>
                </value>
                <value>
                    <fullName>E:51</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flammability_Protection_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flammability Protection Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flammability_Protection_Standards__c</fullName>
        <label>Flammability Protection Standards</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flammability_Standard_Other_Comment__c</fullName>
        <label>Flammability Standard Other Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flammability_Tests__c</fullName>
        <label>Flammability Tests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASTM D6413</fullName>
                </value>
                <value>
                    <fullName>ASTM D6413 13b</fullName>
                </value>
                <value>
                    <fullName>NFPA 2112 -2002</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Front_plate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front plate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Groin_Shape__c</fullName>
        <label>Groin Shape</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Groin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAP_BP_Lower_Limit_M__c</fullName>
        <label>HAP BP Lower Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:200</fullName>
                </value>
                <value>
                    <fullName>B:250</fullName>
                </value>
                <value>
                    <fullName>C:0</fullName>
                </value>
                <value>
                    <fullName>D:0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_BP_Middle_Value_M__c</fullName>
        <label>HAP BP Middle Value M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:250</fullName>
                </value>
                <value>
                    <fullName>B:300</fullName>
                </value>
                <value>
                    <fullName>C:10</fullName>
                </value>
                <value>
                    <fullName>D:7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_BP_Upper_Limit_M__c</fullName>
        <label>HAP BP Upper Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:300</fullName>
                </value>
                <value>
                    <fullName>B:350</fullName>
                </value>
                <value>
                    <fullName>C:15</fullName>
                </value>
                <value>
                    <fullName>D:12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_FP_Lower_Limit_M__c</fullName>
        <label>HAP FP Lower Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:200</fullName>
                </value>
                <value>
                    <fullName>B:250</fullName>
                </value>
                <value>
                    <fullName>C:0</fullName>
                </value>
                <value>
                    <fullName>D:0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_FP_Middle_Value_M__c</fullName>
        <label>HAP FP Middle Value M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:250</fullName>
                </value>
                <value>
                    <fullName>B:300</fullName>
                </value>
                <value>
                    <fullName>C:10</fullName>
                </value>
                <value>
                    <fullName>D:7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_FP_Upper_Limit_M__c</fullName>
        <label>HAP FP Upper Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:300</fullName>
                </value>
                <value>
                    <fullName>B:350</fullName>
                </value>
                <value>
                    <fullName>C:15</fullName>
                </value>
                <value>
                    <fullName>D:12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_SP_Lower_Limit_M__c</fullName>
        <label>HAP SP Lower Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:150</fullName>
                </value>
                <value>
                    <fullName>B:125</fullName>
                </value>
                <value>
                    <fullName>C:0</fullName>
                </value>
                <value>
                    <fullName>D:0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_SP_Middle_Value_M__c</fullName>
        <label>HAP SP Middle Value M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:200</fullName>
                </value>
                <value>
                    <fullName>B:175</fullName>
                </value>
                <value>
                    <fullName>C:10</fullName>
                </value>
                <value>
                    <fullName>D:7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HAP_SP_Upper_Limit_M__c</fullName>
        <label>HAP SP Upper Limit M</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A:250</fullName>
                </value>
                <value>
                    <fullName>B:225</fullName>
                </value>
                <value>
                    <fullName>C:15</fullName>
                </value>
                <value>
                    <fullName>D:12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Keep_BP_dimensions_same_for_all_the_size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep BP dimensions same for all the size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keep_FP_dimensions_same_for_all_the_size__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Keep FP dimensions same for all the size</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>